--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main>
+        <section class="black"></section>
+        <section class="yellow"></section>
+        <section class="red"></section>
+    </main>
 </body>
 </html>
